Modify App.css, Canvas scss, css, jsx, Add Cell Component: App.css: change width of brush controls Canvas.scss: merge canvas and grid css rules Also Update to using flexbox with wrapping to ensure grid cells display correctly Canvas.jsx: remove extra wrapper div Add cells to canvas (temp) Cell: new cell component as dummy for now

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -22,13 +22,11 @@
 }
 
 div.brush-controls-container {
-  margin: 0px 32px 0px 32px;
+  margin: auto;
   border-bottom: 2px solid #ba6ac3;
   border-left: 2px solid #ba6ac3;
   border-right: 2px solid #ba6ac3;
-  display: flex;
-  justify-content: left;
-  align-items: center;
   padding: 10px;
   background-color: #f3befb;
+  width: 586px;
 }
