--- a/src/components/Canvas/Canvas.scss
+++ b/src/components/Canvas/Canvas.scss
@@ -1,13 +1,9 @@
-div.canvas {
-    display: flex;
-    border: 5px solid black;
-    height: 500px;
-    margin: 0px 32px 0px 32px;
-}
-
 div.grid {
-    background-color: white;
-    width: 100%
+    display: inline-flex;
+    flex-wrap: wrap;
+    border: 5px solid black;
+    height: 600px;
+    width: 600px;
 }
 
 div.grid:hover {
